fix: correção pequeno bug no security config